overflow fixed

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,6 +1,7 @@
 html {
   box-sizing: border-box;
   font-size: 16px;
+  margin: 0;
 }
 *,
 *:before,
@@ -26,9 +27,6 @@ main {
     padding-left: 4%;
     height: 100vh;
     position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
   }
 }
 .projectLink {
